@@ -1,0 +1,58 @@
+/*
+ * Copyright 2017-2020 original authors
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package io.micronaut.context.banner;
+
+import io.micronaut.context.annotation.DefaultImplementation;
+import io.micronaut.core.version.VersionUtils;
+
+import java.io.PrintStream;
+
+/**
+ * Default implementation of {@link Banner} that prints a the default Micronaut banner.
+ */
+@DefaultImplementation(Banner.class)
+public class MicronautBanner implements Banner {
+
+    private static final String[] MICRONAUT_BANNER = {
+            " __  __ _                                  _   ",
+            "|  \\/  (_) ___ _ __ ___  _ __   __ _ _   _| |_ ",
+            "| |\\/| | |/ __| '__/ _ \\| '_ \\ / _` | | | | __|",
+            "| |  | | | (__| | | (_) | | | | (_| | |_| | |_ ",
+            "|_|  |_|_|\\___|_|  \\___/|_| |_|\\__,_|\\__,_|\\__|"
+    };
+    private static final String MICRONAUT = "  Micronaut";
+
+    private final PrintStream out;
+
+    /**
+     * Constructor.
+     *
+     * @param out The print stream
+     */
+    public MicronautBanner(PrintStream out) {
+        this.out = out;
+    }
+
+    @Override
+    public void print() {
+        for (String line : MICRONAUT_BANNER) {
+            out.println(line);
+        }
+        String version = VersionUtils.getMicronautVersion();
+        version = (version != null) ? " (v" + version + ")" : "";
+        out.println(MICRONAUT + version + "\n");
+    }
+}
